cluster/apps/default/pve/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: proxmox
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.175
    ports:
      - port: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "false"
    nginx.ingress.kubernetes.io/proxy-redirect: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: pve.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - pve.${SECRET_DOMAIN}
      secretName: pve-tls
